<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">비밀번호를 입력하세요.</string>
    <string name="pw">PW</string>
    <string name="enter_id">아이디를 입력하세요.</string>
    <string name="id">ID</string>
    <string name="welcome_to_go_android">Welcome to Go Android!</string>
    <string name="go_sopt">GO SOPT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="name">NAME</string>
    <string name="enter_name">이름을 입력하세요.</string>
    <string name="specialty">SPECIALTY</string>
    <string name="enter_specialty">특기를 입력하세요.</string>
    <string name="login_success">로그인에 성공하였습니다.</string>
    <string name="login_fail">로그인에 실패하였습니다.</string>
    <string name="sign_up_complete_message">회원가입이 완료되었습니다.</string>
    <string name="auto_login_success_message">자돟 로그인 되었습니다.</string>
    <string name="tibetan_fox">티벳여우</string>
    <string name="mammal">포유류</string>
    <string name="animals">Animals</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_page">My Page</string>
    <string name="logout">로그아웃</string>
    <string name="cancel_logout">로그아웃을 취소합니다.</string>
    <string name="logout_done">로그아웃 하였습니다.</string>
    <string name="ask_logout">로그아웃 하시겠습니까?</string>
    <string name="followers">Followers</string>
    <string name="id_helper_text">숫자와 영문자 조합으로 6~10자를 사용해 주세요.</string>
    <string name="mock_id">tei9999</string>
    <string name="pw_helper_text">숫자,영문자,특수문자 조합으로 8~12자를 사용해 주세요.</string>
    <string name="name_specialty_helper_text">한 글자 이상 입력해 주세요.</string>
    <string name="music_thumbnail">앨범표지</string>
    <string name="add_music_title">음악 등록하기</string>
</resources>