<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.presentation.signup.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.signup.SignUpActivity">

        <TextView
            android:id="@+id/tv_sign_up_title"
            style="@style/TextAppearance.HaeTi.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up_complete"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_id_title"
                    style="@style/TextAppearance.HaeTi.SubTitle.grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/id"
                    app:layout_constraintStart_toStartOf="@+id/layout_id"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_id"
                    style="@style/textInputLayout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    app:boxStrokeColor="@{viewModel.checkIdState}"
                    app:boxStrokeWidth="2dp"
                    app:endIconDrawable="@drawable/ic_x"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_id_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.id}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="tei9999" />

                    <requestFocus />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_id_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="숫자와 영문자 조합으로 6~10자를 사용해 주세요."
                    android:textSize="12sp"
                    app:helperTextColor="@{viewModel.checkIdState}"
                    app:layout_constraintStart_toStartOf="@+id/layout_id"
                    app:layout_constraintTop_toBottomOf="@+id/layout_id" />

                <TextView
                    android:id="@+id/tv_password_title"
                    style="@style/TextAppearance.HaeTi.SubTitle.grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pw"
                    app:layout_constraintStart_toStartOf="@+id/tv_id_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_id_helper" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    style="@style/textInputLayout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    app:boxStrokeColor="@{viewModel.checkPasswordState}"
                    app:boxStrokeWidth="2dp"
                    app:endIconDrawable="@drawable/ic_x"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_password_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="tei9999" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_password_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="숫자,영문자,특수문자 조합으로 8~12자를 사용해 주세요."
                    android:textSize="12sp"
                    app:helperTextColor="@{viewModel.checkPasswordState}"
                    app:layout_constraintStart_toStartOf="@+id/layout_password"
                    app:layout_constraintTop_toBottomOf="@+id/layout_password" />

                <TextView
                    android:id="@+id/tv_name_title"
                    style="@style/TextAppearance.HaeTi.SubTitle.grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="@id/tv_password_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_password_helper" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    style="@style/textInputLayout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    app:boxStrokeColor="@{viewModel.checkNameState}"
                    app:boxStrokeWidth="2dp"
                    app:endIconDrawable="@drawable/ic_x"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.name}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="tei9999" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_name_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="한 글자 이상 입력해 주세요."
                    android:textSize="12sp"
                    app:helperTextColor="@{viewModel.checkNameState}"
                    app:layout_constraintStart_toStartOf="@+id/layout_name"
                    app:layout_constraintTop_toBottomOf="@+id/layout_name" />

                <TextView
                    android:id="@+id/tv_specialty_title"
                    style="@style/TextAppearance.HaeTi.SubTitle.grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/specialty"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_helper" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_specialty"
                    style="@style/textInputLayout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    app:boxStrokeColor="@{viewModel.checkSpecialtyState}"
                    app:boxStrokeWidth="2dp"
                    app:endIconDrawable="@drawable/ic_x"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_specialty_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_specialty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.specialty}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="tei9999" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_special_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="한 글자 이상 입력해 주세요."
                    android:textSize="12sp"
                    app:helperTextColor="@{viewModel.checkSpecialtyState}"
                    app:layout_constraintStart_toStartOf="@+id/layout_specialty"
                    app:layout_constraintTop_toBottomOf="@+id/layout_specialty" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_sign_up_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="12dp"
            android:text="@string/sign_up_complete"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:enabled="@{viewModel.checkSignUpState}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>